# type-safely

./: .gitignore  .gitmodules  LICENSE  README.md  libopencm3-patch.md
common/: .gitignore
common/protobuf/: messages-connection.options  messages-connection.proto  messages-pairing.options  messages-pairing.proto  messages-session.options  messages-session.proto  messages.options  messages.proto
common/protobuf_test_cpp/: .gitignore  CMakeLists.txt  crypto.hpp  main.cpp
common/protobuf_test_python/: .gitignore  tsp_decode.py  tsp_driver.py  tsp_test.py  tsp_utils.py
common/protocol_state_machine/: messages-connection.pb.c  messages-connection.pb.h  messages-pairing.pb.c  messages-pairing.pb.h  messages-session.pb.c  messages-session.pb.h  messages.pb.c  messages.pb.h  pb.h  pb_common.c  pb_decode.c  tsp_device_state_machine.cpp  tsp_device_state_machine.hpp  tsp_host_state_machine.cpp  tsp_host_state_machine.hpp  tsp_implementation_helpers.cpp  tsp_implementation_helpers.hpp  tsp_state_machine.cpp  tsp_state_machine.hpp
type-safely-daemon/: .gitignore  CMakeLists.txt  HIDHandler.cpp  HIDHandler.hpp  HIDLockdownManager.cpp  HIDLockdownManager.hpp  TSPGUIApplication.cpp  TSPGUIApplication.hpp  TSPGUIWorker.cpp  TSPGUIWorker.hpp  TSPPairingManager.cpp  TSPPairingManager.hpp  TSPPairingWizard.cpp  TSPPairingWizard.hpp  crypto.cpp  crypto.h  curve25519_donna.h  main.cpp  pairingpage.cpp  pairingpage.h  usb.cpp  usb.h  utils.cpp  utils.h
type-safely-firmware/: .gitignore  .travis.yml  Makefile
type-safely-firmware/src/: ASCIIEncodedHIDParser.hpp  CircularBuffer.hpp  HIDtoNumberParser.cpp  HIDtoNumberParser.hpp  KeyboardStateMachine.cpp  KeyboardStateMachine.hpp  PersistentLTKStorage.cpp  PersistentLTKStorage.hpp  SEGGER_RTT.c  USBKeyboardScancodes.h  debug.cpp  debug.h  main.cpp
